@@ -1,3 +1,6 @@
+22 June 2004 Sylvain Pion
+- Do not test Compute_area_3 when RT does not support sqrt().
+
 20 June 2004 Sylvain Pion
 - Move are_positive_oriented() and are_negative_oriented() after
   the definition of orientation() which they call with qualification.
